--- a/bin/install
+++ b/bin/install
@@ -20,6 +20,8 @@ install_composer() {
   local bin_path=$1/bin
   local expected_signature="$(curl -sL https://composer.github.io/installer.sig)"
 
+  cd "$1"
+
   "$bin_path/php" -r "copy('https://getcomposer.org/installer', 'composer-setup.php');"
   "$bin_path/php" -r "if (hash_file('sha384', 'composer-setup.php') === '${expected_signature}') { echo 'Installer verified'; } else { echo 'Installer corrupt'; unlink('composer-setup.php'); } echo PHP_EOL;"
   "$bin_path/php" composer-setup.php "--install-dir=$bin_path" --filename=composer
@@ -52,4 +54,4 @@ case "$ASDF_INSTALL_VERSION" in
 esac
 
 install_php "$ASDF_INSTALL_TYPE" "$ASDF_INSTALL_VERSION" "$ASDF_INSTALL_PATH"
-# install_composer "$ASDF_INSTALL_PATH"
+install_composer "$ASDF_INSTALL_PATH"
